# currency_converter_api

./: README.md
backend/: Dockerfile  main.py  pyproject.toml  settings.py
backend/api/: handlers.py  schemas.py
backend/external_api/: currency.py  schemas.py
backend/tests/: conftest.py  test_handlers.py
